--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     <div class="timeline-item" tabindex="0">
                         <h2 class="text-2xl font-semibold">Event 1</h2>
                         <p class="text-gray-600 dark:text-gray-400">Description of event 1.</p>
+                        <p class="text-gray-600 dark:text-gray-400 timeline-content">Additional details about event 1.</p>
                     </div>
                     <div class="timeline-item" tabindex="0">
                         <h2 class="text-2xl font-semibold">Event 2</h2>
