--- a/index.html
+++ b/index.html
@@ -1,36 +1,84 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-white dark:bg-gray-900 text-black dark:text-white">
+<html lang="en" class="bg-white dark:bg-green-950 text-black dark:text-white">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timeline</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="container mx-auto p-4 text-xl">
-        <h1 class="text-4xl font-bold mb-4">Timeline</h1>
+        <h1 class="text-4xl font-bold mb-4">Wings of Fire Poison Jungle <small>(Book 13)</small> Timeline</h1>
         <div class="flex flex-col">
             <div class="relative">
-                <div class="absolute left-0 top-0 h-full w-1 bg-gray-300 dark:bg-gray-700"></div>
+                <div class="absolute left-0 top-0 h-full w-1 bg-gray-300 dark:bg-green-700"></div>
                 <div class="flex flex-col items-stretch">
                     <div class="timeline-item" tabindex="0">
-                        <h2 class="text-2xl font-semibold">Event 1</h2>
-                        <p class="text-gray-600 dark:text-gray-400">Description of event 1.</p>
+                        <h2 class="text-2xl font-semibold">Clearsight Arrives on Pantala</h2>
+                        <p class="text-gray-600 dark:text-gray-200">Clearsight, Darkstalker's Soulmate, arrives on
+                            Pantala.</p>
+                        <div class="timeline-content">Clearsight also is a very powerful future-seer, she creates a book
+                            that shows all the events some amount of time in the future. She also creates the first
+                            HiveWings.</div>
+                        <span class="see-more">See More</span>
                     </div>
                     <div class="timeline-item" tabindex="0">
-                        <h2 class="text-2xl font-semibold">Event 2</h2>
-                        <p class="text-gray-600 dark:text-gray-400">Description of event 2.</p>
+                        <h2 class="text-2xl font-semibold">Tree Wars</h2>
+                        <p class="text-gray-600 dark:text-gray-200">War between the HiveWings, LeafWings and SilkWings
+                        </p>
+                        <div class="timeline-content">The HiveWings are against the LeafWings, the SilkWings kinda just
+                            gave up. The HiveWings burn all the trees, and assume the they wiped out hte LeafWings in
+                            the process.</div>
+                        <span class="see-more">See More</span>
                     </div>
                     <div class="timeline-item" tabindex="0">
-                        <h2 class="text-2xl font-semibold">Event 3</h2>
-                        <p class="text-gray-600 dark:text-gray-400">Description of event 3.</p>
+                        <h2 class="text-2xl font-semibold">Migration to Poison Jungle</h2>
+                        <p class="text-gray-600 dark:text-gray-200">The LeafWings migrate to the Poison Jungle after the
+                            Tree Wars, the one of the only forests left.</p>
+                        <span class="see-more">See More</span>
+                    </div>
+                    <div class="timeline-item" tabindex="0">
+                        <h2 class="text-2xl font-semibold">Some of the LeafWings Form a Splinter Group.</h2>
+                        <p class="text-gray-600 dark:text-gray-200">This forms the "PoisonWings," as they are more
+                            geared towards attacking the HiveWings.</p>
+                        <div class="timeline-content">
+                            The leader of the PoisonWings, Belladonna, is also Sundew's mother.
+                        </div>
+                        <span class="see-more">See More</span>
+                    </div>
+                    
+                    <div class="divider">Events of Book 13</div>
+
+                    <div class="timeline-item" tabindex="0">
+                        <h2 class="text-2xl font-semibold">
+                            Bloodworm Hive is Burnt Down.
+                        </h2>
+                        <p class="text-gray-600 dark:text-gray-200">
+                            Bloodworm Hive was burnt down with Blue's flamesilk.
+                        </p>
+                        <div class="timeline-content">
+                            His flamesilk was collected and used for the arson, without his consent, by the PoisonWings.
+                        </div>
+                        <span class="see-more">See More</span>
+                    </div>
+
+                    <div class="timeline-item" tabindex="0">
+                        <h2 class="text-2xl font-semibold">
+                            HiveWings Invade Poison Jungle
+                        </h2>
+                        <p class="text-gray-600 dark:text-gray-200">
+                            During this invasion the jungle is burnt down.
+                        </p>
+                        <span class="see-more">See More</span>
                     </div>
                 </div>
 
             </div>
         </div>
-
     </div>
     <script src="script.ts" type="module"></script>
 </body>
+
 </html>
