Add timeline events for Book 13 and improve styles

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </div>
                         <span class="see-more">See More</span>
                     </div>
-                    
+
                     <div class="divider">Events of Book 13</div>
 
                     <div class="timeline-item" tabindex="0">
@@ -66,15 +66,37 @@
 
                     <div class="timeline-item" tabindex="0">
                         <h2 class="text-2xl font-semibold">
+                            SeaWings Arrive on Pantala
+                        </h2>
+                        <p class="text-gray-600 dark:text-gray-200">
+                            Turtle and Tsunami arrive on Pantala.
+                        </p>
+                        <div class="timeline-content">
+                            They were sent by the Luna, a SilkWing, because she was worried about Blue and Cricket.
+                        </div>
+                        <span class="see-more">See More</span>
+                    </div>
+
+                    <div class="timeline-item" tabindex="0">
+                        <h2 class="text-2xl font-semibold">
                             HiveWings Invade Poison Jungle
                         </h2>
                         <p class="text-gray-600 dark:text-gray-200">
                             During this invasion the jungle is burnt down.
                         </p>
+                        <div class="timeline-content">
+                            The HiveWings invade the Poison Jungle, and burn it down. They are trying to kill the
+                            LeafWings, as they burnt down the Bloodworm Hive.
+                        </div>
+                        <span class="see-more">See More</span>
+                    </div>
+                    <div class="timeline-item" tabindex="0">
+                        <h2 class="text-2xl font-semibold">The LeafWings Evacuate</h2>
+                        <p class="text-gray-600 dark:text-gray-200">The LeafWings evacuate the Poison Jungle.</p>
+                        <div class="timeline-content">The LeafWings evacuate the Poison Jungle, and island hop to Pyrrhia using the map in the Book of Clearsight.</div>
                         <span class="see-more">See More</span>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
