--- a/index.html
+++ b/index.html
@@ -49,6 +49,23 @@
                         <span class="see-more">See More</span>
                     </div>
 
+                    <div class="timeline-item" tabindex="0">
+                        <h2 class="text-2xl font-semibold">Luna is rescued by Blue and his friends</h2>
+                        <p class="text-gray-600 dark:text-gray-200">Luna is rescued from the Flamesilk Cavern by Blue and his friends.</p>
+                        <div class="timeline-content">
+                            Blue's friends are Cricket, Sundew, and Swordtail.
+                        </div>
+                    </div>
+
+                    <div class="timeline-item" tabindex="0">
+                        <h2 class="text-2xl font-semibold">Cricket rescues Bumblebee</h2>
+                        <p class="text-gray-600 dark:text-gray-200">Cricket rescues Bumblebee from the HiveWings.</p>
+                        <div class="timeline-content">
+                            Bumblebee is a baby HiveWing, that was not injected with second dose of mind control venom.
+                        </div>
+                        <span class="see-more">See More</span>
+                    </div>
+
                     <div class="divider">Events of Book 13</div>
 
                     <div class="timeline-item" tabindex="0">
@@ -96,6 +113,7 @@
                         <div class="timeline-content">The LeafWings evacuate the Poison Jungle, and island hop to Pyrrhia using the map in the Book of Clearsight.</div>
                         <span class="see-more">See More</span>
                     </div>
+
                 </div>
             </div>
         </div>
